--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+ </head>
 <body>
-    <hl>Vai ser uma imagem aqui</hl>
-
 </body>
 </html>
-
-title>Document</title>
-<link rei="stylesheet" href="style.css">
+<head>
+    <meta charset=”UTF-8”>
+    </head>
+    <head>
+        <meta charset=”UTF-8”>
+        <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
+        </head><head>
+            <meta charset=”UTF-8”>
+            <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
+            <title>AluraBooks</title>
+            </head>
+            <head>
+                <meta charset=”UTF-8”>
+                <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
+                <title>AluraBooks</title>
+                <link rel=”stylesheet” href=”styles.css”>
+                </head>
